ext/bigdecimal/bigdecimal.c
@@ -2381,6 +2381,9 @@ retry:
 	GUARD_OBJ(y, VpCreateRbObject(1, "0"));
     }
     VpPower(y, x, int_exp);
+    if (VpIsDef(y)) {
+	VpMidRound(y, VpGetRoundMode(), n);
+    }
     return ToValue(y);
 }
 
